# multi-translate-service

./: .env  README.md  generate_file.py  main.py  pyproject.toml
db/: init.sql
src/: app.py  celery_app.py
src/configs/: config.py
src/models/: __init__.py  base.py  translation_model.py
src/prompts/: prompt.py
src/routes/: translation.py
src/schemas/: text_schemas.py  translation_schemas.py
src/services/: file_decoding_service.py  llm_translate_service.py  similarity_service.py  translation_services.py
src/tasks/: translation_tasks.py
src/utils/: file.py  logger.py
